<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tittleColor1"
        android:gravity="center"
        android:text="@string/title1"
        android:textColor="@color/text1"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_upper"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@color/white_1"
                android:gravity="right|bottom"
                android:lines="3"
                android:text="Default"
                android:textColor="@color/txt_c1"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/white"
                android:gravity="right|bottom"
                android:lines="3"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="40dp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="4"
                android:rowCount="5">

                <Button
                    android:id="@+id/btn_clearAll"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@drawable/btn_selector1"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/btn_clearAll"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_multiply"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@drawable/btn_selector1"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/btn_multiply"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_divide"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@drawable/btn_selector1"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/btn_divide"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_backspace"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@drawable/btn_selector1"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/btn_backspace"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_num1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@color/buttonColor2"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_num2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@color/buttonColor2"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_num3"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@color/buttonColor2"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@drawable/btn_selector1"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/btn_plus"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_num4"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@color/buttonColor2"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_num5"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@color/buttonColor2"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_num6"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@color/buttonColor2"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@drawable/btn_selector1"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/btn_minus"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_num7"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@color/buttonColor2"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="7"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_num8"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@color/buttonColor2"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="8"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_num9"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@color/buttonColor2"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="9"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_openSquared"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@drawable/btn_selector3"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/btn_openSquared"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_square"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@drawable/btn_selector3"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/btn_square"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_num0"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@color/buttonColor2"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_dot"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@drawable/btn_selector1"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/btn_dot"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/btn_equal"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:background="@drawable/btn_selector3"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/btn_equal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size" />


            </GridLayout>


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>